# ChangeLog for dev-perl/Convert-BinHex
# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Convert-BinHex/ChangeLog,v 1.8 2007/01/15 15:16:57 mcummings Exp $

  15 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  Convert-BinHex-1.119.ebuild:
  Ebuild maintenance

  05 Aug 2006; Michael Cummings <mcummings@gentoo.org>
  Convert-BinHex-1.119.ebuild:
  Adding perl dep; fixed DEPEND

  10 Jul 2006; Aron Griffis <agriffis@gentoo.org>
  Convert-BinHex-1.119.ebuild:
  Mark 1.119 stable on ia64

  30 Mar 2006; Aron Griffis <agriffis@gentoo.org>
  Convert-BinHex-1.119.ebuild:
  Mark 1.119 ~ia64

  01 Jan 2006; Martin Holzer <mholzer@gentoo.org>
  Convert-BinHex-1.119.ebuild:
  Marking stable on amd64

  24 Apr 2005; Michael Cummings <mcummings@gentoo.org>
  Convert-BinHex-1.119.ebuild:
  cleaning

*Convert-BinHex-1.119 (10 Apr 2004)

  10 Apr 2004; Eric Sammer <esammer@gentoo.org> Convert-BinHex-1.119.ebuild,
  metadata.xml:
  Initial version. Closes bug #46332. Thanks to Richard Brown for the
  submission!
