@@ -1,6 +1,10 @@
 # ChangeLog for dev-perl/Convert-BinHex
-# Copyright 2000-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Convert-BinHex/ChangeLog,v 1.8 2007/01/15 15:16:57 mcummings Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Convert-BinHex/ChangeLog,v 1.9 2009/05/09 16:35:26 klausman Exp $
+
+  09 May 2009; Tobias Klausmann <klausman@gentoo.org>
+  Convert-BinHex-1.119.ebuild:
+  Keyworded on alpha, bug #268645
 
   15 Jan 2007; Michael Cummings <mcummings@gentoo.org>
   Convert-BinHex-1.119.ebuild:
